# raster

./: .gitignore  CMakeLists.txt  README.md
scripts/: CodeCounter.sh  Distclean.sh
sources/: CMakeLists.txt
sources/Color/: CMakeLists.txt  Color.hxx  ColorDetail.hxx  Dithering.hxx  MiddleCutQuantizer.hxx  OctreeQuantizer.hxx  QRGBA.hxx  Quantize.hxx  RGBA16161616.cxx  RGBA16161616.hxx  RGBA8888.cxx  RGBA8888.hxx  SimpleQuantizer.hxx
sources/Common/: Args.cxx  Args.hxx  CMakeLists.txt  Common.hxx  Concepts.hxx  Endian.hxx  Tools.cxx  Tools.hxx
sources/Compression/: CMakeLists.txt  LZW16.cxx  LZW16.hxx
sources/Image/: Base.cxx  Base.hxx  CMakeLists.txt  Farbfeld.cxx  Farbfeld.hxx  Image.hxx  PPM.cxx  PPM.hxx  Simple00.cxx  Simple00.hxx  Simple01.cxx  Simple01.hxx  Simple02.cxx  Simple02.hxx  Targa.cxx  Targa.hxx
sources/Math/: Camera.hxx  Math.hxx  Matrix.hxx  Ray.hxx  Shape.hxx  Sphere.hxx  Vector.hxx  Vector2.hxx  Vector3.hxx  Vector4.hxx
sources/Object/: Camera.hxx  Object.hxx  Plane.hxx  Shape.hxx  Sphere.hxx
sources/Tests/: CMakeLists.txt  TestCases.cxx  TestCases.hxx  Test_Endianess.cxx  Test_LZW16.cxx  Test_LZW16_speed.cxx  Test_PPM.cxx  Test_Simple.cxx  Test_Simple00.cxx  Test_Targa.cxx  Test_Vector2.cxx  Test_Vector3.cxx  Test_Vector4.cxx
sources/Tools/: CMakeLists.txt  Converter.cxx  Viewer.cxx
